force-app/main/default/objects/DRE__DRE_Event_Log__c/DRE__DRE_Event_Log__c.object-meta.xml
<CustomObject>
    <label>DRE Event Log</label>
    <nameField>
        <displayFormat>DRELOG-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRE Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>