force-app/main/default/objects/DRE__DRE_Event_Log__c/fields/DRE__CPU_Time__c.field-meta.xml
<CustomField>
    <fullName>DRE__CPU_Time__c</fullName>
    <label>CPU Time (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>