force-app/main/default/objects/DRE__DRE_Event_Log__c/fields/DRE__Description__c.field-meta.xml
<CustomField>
    <fullName>DRE__Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>