force-app/main/default/objects/DRE__DRE_Event_Log__c/fields/DRE__DRE_Rule__c.field-meta.xml
<CustomField>
    <fullName>DRE__DRE_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DRE Rule</label>
    <referenceTo>DRE__DRE_Rule__c</referenceTo>
    <relationshipLabel>Event Logs</relationshipLabel>
    <relationshipName>DRE_Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>