force-app/main/default/objects/DRE__DRE_Event_Log__c/fields/DRE__Operation__c.field-meta.xml
<CustomField>
    <fullName>DRE__Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPLY</fullName>
            </value>
            <value>
                <fullName>EVALUATE</fullName>
            </value>
            <value>
                <fullName>START</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>