force-app/main/default/objects/DRE__DRE_Event_Log__c/fields/DRE__Pass_Count__c.field-meta.xml
<CustomField>
    <fullName>DRE__Pass_Count__c</fullName>
    <label>Pass Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>