force-app/main/default/objects/DRE__DRE_Event_Log__c/fields/DRE__RelatedId__c.field-meta.xml
<CustomField>
    <fullName>DRE__RelatedId__c</fullName>
    <label>Related ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>