force-app/main/default/objects/DRE__DRE_Event_Log__c/fields/DRE__SessionId__c.field-meta.xml
<CustomField>
    <fullName>DRE__SessionId__c</fullName>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>