force-app/main/default/objects/DRE__DRE_Event_Log__c/fields/DRE__Severity__c.field-meta.xml
<CustomField>
    <fullName>DRE__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
                <default>true</default>
                <label>INFO</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>