force-app/main/default/objects/DRE__DRE_Event_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DRE__DRE_Rule__c</columns>
    <columns>DRE__Severity__c</columns>
    <columns>DRE__Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>