force-app/main/default/objects/DRE__DRE_Event_Log__c/listViews/Today_s_Logs.listView-meta.xml
<ListView>
    <fullName>Today_s_Logs</fullName>
    <columns>NAME</columns>
    <columns>DRE__DRE_Rule__c</columns>
    <columns>DRE__Description__c</columns>
    <columns>DRE__Operation__c</columns>
    <columns>DRE__Severity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>DRE__RelatedId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today's Logs</label>
</ListView>